add bullet about calibration tools

--- a/introduction.tex
+++ b/introduction.tex
@@ -85,6 +85,7 @@ the use of a charged particle beam to:
 
 For the detector performance characterization a well defined charged particle test beam will 
 enable the following detector performance measurements:
+
 \begin{enumerate}
  \item characterize performance of full scale TPC module
  \item verify functionality of cold TPC electronics under LAr cryogenic conditions
@@ -92,6 +93,7 @@ enable the following detector performance measurements:
  \item study performance of the photon detection system
  \item verify argon contamination levels and associated mitigation procedures
  \item develop and test installation procedures for full-scale detector components
+ \item test and evaluate the performance of detector calibration tools
 \end{enumerate}
 
 
