--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -1,5 +1,5 @@
 
-\subsection{LBNF detector}
+\subsection{ELBNF detector}
 
 The far detector for the ELBNF collaboration will be a series of four liquid argon time projection chambers (TPC), each in a cryostat that holds a fiducial/active/total LAr mass of 10.0/13.3/16.9 kt. The TPCs will be instrumented with photon detection. It is planned that the first 10 kt detector will be ready for installation in the 2021 timeframe. One option for the TPC design is a wire plane based TPC with cold electronics readout. Designs of this style are are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the argon liquid phase. This style TPC has the advantage that there is no charge amplification before collection making a very precise charge measurement possible. To achieve ELBNF's goals, a detector much larger than ICARUS, the largest LAr TPC detector built to date, is needed. The LBNE experiment was developing a scalable far detector design shown in Figure \ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat. The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. The scintillation photon detectors will employ light collection paddles to reduce the required photo-cathode area. Many of the aspects of the design will be tested in a small scale prototype at Fermilab but given the very large scale of the detector elements a full-scale test is highly desirable. As the new ELBNF collaboration forms and organized a combined detector design team will emerge. Ideas from this new collaboration will modify the design presented here but this design provides a concrete example of a possible future detector. 
 
