minor subsection edit

--- a/computing.tex
+++ b/computing.tex
@@ -1,6 +1,6 @@
 % moved to main doc \section{Computing requirements, data handling and software}
 
-\subsection{Overview}
+%\subsection{Overview}
 The proposed ``Full Scale'' test of a single-phase Liquid Argon TPC at CERN will build upon the technology and expertise developed in the
 process of design and operation of its smaller predecessor, the 35t detector at FNAL.
 This includes elements of front-end electronics, data acquisition, run controls and related systems. We also expect that for the most part,
