minor subsection edit

--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -63,7 +63,7 @@ The beam position detector measures the positions of the particle as it traverse
 \subsubsection{Particle Identification}
 In order to have good particle identification over large momentum range, two indepent particle identfication systems are needed in the beamline. The Time-of-Flight system will be used to cover lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles.
 
-\subsection{Muon Beam Halo Counters}
+\subsubsection{Muon Beam Halo Counters}
 The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events.
 
 \subsection{Beam Window on LAr Cryostat}
