remove duplicate cryostat dimension text

--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -43,11 +43,7 @@ To the extent possible the TPC will be assembled from elements that are of the s
 All of this will be supported by rows of I-beams supported from a mechanical structure above the cryostat.  The hangers for these I-beams will pass through the insulated top cap.  There will be a series of feed thru flanges in the top cap of the cryostat to bring in and take out services for the TPC.  There will be a HV feed thru for each of the CPA rows and one signal feed thru for each of the APAs.
 
 
-The minimum internal size of the cryostat is 9.5 m long, 7.3 m wide and 8.4 m high.  This is determined from size of the TPC.  At the bottom of the 
-cryostat there needs to be a minimum of 0.3 m between the frame of the CPA and closest point on the SS membrane.  This is to prevent high voltage discharge between the CPA and the electrically grounded membrane. It is foreseen that there would be some cryogenic piping and instrumentation under the TPC.  There is a height allowance of 0.1 m for this.  There will be access and egress space around the outside of the TPC and the membrane walls.  On three sides, 1.0 m of space is reserved for this.  The final side of the TPC will have piping and instrumentation for the cryogenic system.  There will be 1.3 m of space reserved for this.  
-
-The support system for the TPC will be located at the top between the underside of the cryostat roof and  the top of the TPC.  The plan is to model this space similar to what is planned for the far site TPC.  There will be 0.9 m of ullage space.  In order to prevent high voltage discharge, the upper most part of the CPA needs to be submerged a minimum of 0.3 m below the liquid Argon surface.  The top of the TPC will be separated from the membrane by a minimum of 1.2 m.  
-
+The minimum internal size of the cryostat is 9.5 m long, 7.3 m wide and 8.4 m high.  This is determined from size of the TPC.  
 These dimensions also preserve the ability to reverse the order of the APAs and CPAs inside the TPC.  The current plan is to have the APAs located in the center of the cryostat with a CPA on each side.  Reversing this to have the CPA in the center and APAs on each side may be required to minimize the dead space between the two drift volumes.    
 
 
