--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -153,7 +153,7 @@ Table~\ref{tab:runplan} summarizes the required exposures to beam particles.
 Particle & Momenta (GeV) & Exposure & Purpose \\ \hline
 charged $\pi$       & 0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10     &  10K  & hadronic shower \\ \hline
 charged $\pi$ &  1  &  10K  & vary angle, reconstruction \\ \hline
-electron       &    0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10        &    10K   & EM shower/e-$\gamma$ PID     \\ \hline
+electron       &    0.1, 0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 10        &    100K   & EM shower/e-$\gamma$ PID     \\ \hline
 electron &  1  &  10K  & vary angle, reconstruction \\ \hline
 muon &   0.1, 0.3, 0.5, 1, 2, 5, 10  &  10K & $E_\mu$ calibration, MCS \\ \hline
 muon &  1  &  10K  & vary angle, reconstruction \\ \hline
@@ -167,9 +167,15 @@ kaon  & 0.1, 0.2, 0.3, 0.5, 1 & ?   &   response, PID  \\ \hline
 
 NUMBERS ARE UPDATED GUESSES - STUDIES NEEDED HERE \\
 Charged pion samples will be used to characterize hadronic shower response and to measure
-absorption cross section parameters on argon. Muon samples will be used for calibration and 
+absorption cross section parameters on argon. NEED STUDY of HADRONIC SHOWER RESOLUTION
+(for now pion statistics give better than $\sim$1\% measurement of mean for upper limit from 50\%/$\sqrt{E}$ in sampling calorimeters
+for all energies except 0.1 GeV point). 
+Muon samples will be used for calibration and 
 reconstruction tests. Electron samples will be used to measure EM shower response  
-and to tune PID angorithms. Proton response will be studied for reconstruction and to tune PID 
+and to tune PID algorithms (statistics shown will far exceed 1\% uncertainty on the mean for 
+EM showers with resolution on the order of 1\% as measured in DOCDB 8848. 100k Electron event samples will allow
+high statistics studies of e-gamma separation).  
+Proton response will be studied for reconstruction and to tune PID 
 algorithms. Kaon data will be needed to tune proton decay backgrounds .
 Special runs at various angles with $\pi$, $\mu$, p and electrons will be performed to study reconstruction and tune PID algorithms. 
 
