--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -173,7 +173,7 @@ for all energies except 0.1 GeV point).
 Muon samples will be used for calibration and 
 reconstruction tests. Electron samples will be used to measure EM shower response  
 and to tune PID algorithms (statistics shown will far exceed 1\% uncertainty on the mean for 
-EM showers with resolution on the order of 1\% as measured in DOCDB 8848. 100k Electron event samples will allow
+EM showers with resolution on the order of 1\% (see DOCDB 9434 and 8835). 100k Electron event samples will allow
 high statistics studies of e-gamma separation).  
 Proton response will be studied for reconstruction and to tune PID 
 algorithms. Kaon data will be needed to tune proton decay backgrounds .
