Added run plan tables for supernova and proton decay.

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -300,4 +300,26 @@ $K^- $      &  0.2-1.5 (100MeV bins), 1.5-10.0 ( 200MeV bins)    &  1000 (56k)  
 \subsubsection{Proton decay background (cosmogenic $K^{0} \to K^+$)}
 
 
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Particle     & Momenta (GeV)                                                                                       & Exposure/bin (total)  \\ \hline
+$K^+$   & 0.5-0.8 MeV (50 MeV bins)   &  1000 (6k)     \\ \hline
+$K^-$   & 0.5-0.8 MeV (50 MeV bins)   &  1000 (6k)     \\ \hline
+\end{tabular}\caption{Data sample requirements for calibrate absiolute energy scale. }
+\end{table}
 
+
+\subsubsection{Supernova}
+The energies of the electrons coming from CC $\nu_e$ interactions from Supernova will be in the orider of few MeV. The beam test cannot offer such low energy electron, but one can use the Michel electrons form $'mu$ decay to cover these energies. The SK used the Michel spectrum to calibrate the absolute energy scale. 
+
+
+\begin{table}[h]
+\centering
+\begin{tabular}{|c|c|c|}
+\hline
+Particle     & Momenta (GeV)                                                                                       & Exposure/bin (total)  \\ \hline
+$\mu^+$   & any, but need to stop    &  2000 (2k)     \\ \hline
+\end{tabular}\caption{Data sample requirements for calibrate absiolute energy scale. }
+\end{table}
